collapse fixed scroll down

--- a/my-react-app/src/styles/components/_headerKasaLocation.scss
+++ b/my-react-app/src/styles/components/_headerKasaLocation.scss
@@ -1,7 +1,7 @@
 .header {
   margin: 4% auto 1% auto;
   max-width: 1600px;
-  height: 200px;
+  height: 130px;
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
